@@ -29,6 +29,9 @@ Release @version@-@release@ Start 05/02/2024 End XX/XX/XXXX
 - 22/05/2024
 14. svctool: fix checking for vadddomain path
 15. svctool: fix db creation for MariaDB > v10.3
+- 23/05/2024
+16. do_match.c, getDowmainToken.c, qregex.c renamed wildmat_internal to wildmat
+16. svctool: added --sysconfdir for indisrvr service creation
 
 * Sun Mar 03 2024 12:20:15 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.7-1.1%{?dist}
 Release 3.0.7-1.1 Start 02/01/2024 End 03/02/2024
